# maui-accounts-gui

./: CMakeLists.txt
src/: main.cpp
src/qml/: main.qml  qml.qrc  utils.js
src/qml/AddAccountForm/: AddAccountForm.qml  qmldir
src/viewcontrollers/: MainControllerQmlPlugin.cpp  MainControllerQmlPlugin.hpp  MainViewController.cpp  MainViewController.hpp
